crates/swc_fast_ts_strip/tests/tsc/classConstructorOverloadsAccessibility.strip.broken
  x Unexpected token `constructor`. Expected * for generator, private key, identifier or async
   ,-[$DIR/tests/tsc/classConstructorOverloadsAccessibility.strip.js:4:1]
 3 | class A {
 4 |     public constructor(a         ) // error
   :            ^^^^^^^^^^^
 5 |     protected constructor(a        ) // error
   `----
